# advent-of-code

./: README.md
2021/: README.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  pyproject.toml
2021/1.SonarSweep/part1/: main.py
2021/1.SonarSweep/part2/: main.py
2021/10.SyntaxScoring/: main.py
2021/11.DumboOctopus/: main.py
2021/12.PassagePathing/: main.py
2021/13.TransparentOrigami/: main.py  paper.py
2021/14.ExtendedPolymerization/: main.py
2021/15.Chiton/: main.py
2021/2.Dive/part1/: main.py
2021/2.Dive/part2/: main.py
2021/3.BinaryDiagnostic/part1/: main.py
2021/3.BinaryDiagnostic/part2/: main.py
2021/4.GiantSquid/allParts/: bingoBoard.py  main.py
2021/5.HydrothermalVenture/: part1.py  part2.py
2021/6.Lanternfish/: main.py
2021/6.Lanternfish/allParts/: main.py
2021/7.TreacheryOfWhales/: main.py
2021/8.SevenSegmentSearch/: main.py
2021/9.SmokeBasin/: main.py
2021/SonarSweep1/part1/: main.py
2021/SonarSweep1/part2/: main.py
2022/: package-lock.json  package.json
2022/src/day-1/: main.js  main.ts
2022/src/day-2/: main.js  main.ts
2022/src/day-3/: main.js  main.ts
2023/: .gitignore  package-lock.json  package.json  tsconfig.json
2023/src/day-1/: main.js  main.ts
2023/src/day-2/: main.js  main.ts
2023/src/day-3/: main.ts
2023/src/day-4/: main.ts
2023/src/day-5/: main.ts
2023/src/day-6/: main.ts
