[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = "2021 Advent of Code (in python)"
authors = ["Lucas Boje <lucasaboje@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
bidict = "^0.21.4"
numpy = "^1.21.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
day-8 = "8.SevenSegmentSearch.main:main"